--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
