--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.2",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
