--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-cron": "^3.0.0",
     "nodemon": "^2.0.15",
     "validator": "^13.7.0"
